--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
              <div class="voice_box drag_resize" id="moving" onclick="replayAudio('')" style="cursor: n-resize; height: 3.38614%; left: 28.8238%; top: 84.3247%; width: 27.894%;"></div>
              <div class="voice_box drag_resize" id="moving" onclick="PlayGame()" style="    cursor: n-resize;height: 47.38614%;left: 10.8238%;top: 23.3247%;width: 77.894%;"></div>
 
-             <button class="btn btn-dark col-1 p-2 translate-middle">ClickMe</button>
+             <button class="btn btn-dark col-1 p-2 position-absolute flexCenter text-bg-danger translatex(-50%)  translatey(-50%) " style="top: 20%;
+             left: 45%;">ClickMe</button>
              </section>
              
     <article id="game-window" class="game-main-section" onmousemove="move(event)" ontouchmove="move(event)"
